--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,4 +1,13 @@
 <h1>My first web page</h1>
 <h2>Written with the guidance of Moringa Prep</h2>
 
-<p>This is my first web page!</p><p>Isn't it nice</p>
+<p>This is my first web page!</p>
+<p>Isn't it nice</p>
+
+<p>Here are somethings I'm going to learn about coding:</p>
+<ul>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+  <li>And alot more</li>
+</ul>
