--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <h1>My first web page</h1>
-    <h2>Written with the guidance of Moringa Prep</h2>
+    <h2>Written with the guidance of <a href="http://www.moringaschool.com/"><em>Moringa School</em></a></h2>
 
-    <p>This is my first web page!</p>
+    <p>This is my <strong>first web page</sttrong>!</p>
     <p>Isn't it nice</p>
 
     <p>Here are somethings I'm going to learn about coding:</p>
@@ -17,5 +17,6 @@
       <li>JavaScript</li>
       <li>And alot more</li>
     </ul>
+    <p>Here is a link to my <a href="favourite-things.html">Favourite things</a></p>
   </body>
 </html>
