--- a/favourite-things.html
+++ b/favourite-things.html
@@ -8,17 +8,17 @@
     <h2>These are a few of my favorite things.</h2>
 
     <h3>People</h3>
-    <p>Here are some of my favorite people</p>
+    <p>Here are some of my favorite <em>people</em></p>
     <ul>
       <li>My Paps and Ma:
         <ul>
-          <li>Donald</li>
-          <li>Mary</li>
+          <li><strong>Donald</strong></li>
+          <li><strong>Mary</strong></li>
         </ul>
       </li>
-      <li>My friend Joseph</li>
-      <li>My Niece Yvonne</li>
-    </ul>
+      <li>My friend <strong>Joseph</strong></li>
+      <li>My Niece<a href="http://www.example.com/candy.html"><strong>Yvonne</strong></li></a>
+        <img src="img/yvonne.jpg"alt="A photo of yvonne">
 
     <h3>My Favorite Food</h3>
     <p>Top three of my favorite food</p>
